# pathtrim

./: Cargo.toml  changelog.md  readme.md
.github/workflows/: Continuous Integration.yml
src/: lib.rs
tests/: external_api_test.rs
