[package]
name = "pathtrim"
version = "1.0.6"
edition = "2021"
repository = "https://github.com/rrrodzilla/pathtrim"
authors = ["Roland Rodriguez <rolandrodriguez@gmail.com"]
description = "This crate implements the TrimmablePath trait on anything that implements AsRef<std::path::Path> so you can easily obtain the last *n* parts of a path."
license = "MIT OR Apache-2.0"
keywords = ["Path", "utilities", "path-utilities", "path-traits"]
categories = ["os", "text-processing"]
readme = "readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
